@@ -1,3 +1,3 @@
 usr/bin
-usr/lib/nx
+usr/share/pixmaps
 usr/share/x2go
