@@ -1,1 +1,0 @@
-usr/lib/nx/bin/nxagent usr/lib/x2go/bin/x2goagent
