@@ -39,6 +39,8 @@ nx-libs (2:3.5.0.17-0) UNRELEASED; urgency=low
   * Update 031_nx-X11_parallel-make.full.patch. Add an explicit dependency
     from the NX libX11.so to the nxcomp libraries. Unbreaks parallel builds.
     (Fixes: #87).
+  * Fix and greatly enhance the top-level install and uninstall target for
+    plain makefile installs.
 
  -- Reinhard Tartler <siretart@tauware.de>  Sat, 15 Dec 2012 14:29:12 +0100
 
